--- a/test.html
+++ b/test.html
@@ -21,7 +21,7 @@
         minZoom: 0,
         maxZoom: 10,
     });
-    L.tileLayer('tiles/{z}/{x}/{y}.jpg', {
+    L.tileLayer('tiles/{z}/{x}/{y}.webp', {
         minZoom: 0, maxZoom: 10,
         attribution: 'Gotile'
     }).addTo(map);
